[package]
name = "patate_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
serde = { version= "1", features=["derive"] }
serde_json = "1"
md5= "0.7.0"
rand = "0.8.5"
indoc = "1.0.6"